# ramtools

./: .clang-format  .clang-format-ignore  .clang-tidy  .codecov.yml  .gitignore  CMakeLists.txt  Doxyfile  LinkDef.h  Makefile  README.md  ramrecord.h  samtoram.C
.github/workflows/: benchmark.yml  ci.yml  clang-format.yml  clang-tidy-review-post.yml  clang-tidy-review.yml
benchmark/: CMakeLists.txt  README.md  benchmark_config.h  benchmark_utils.h  chromosome_split_benchmark.cxx  columnar_read_benchmark.cxx  conversion_time_benchmark.cxx  generate_sam.cxx  generate_sam_benchmark.cxx  generate_sam_benchmark.h  region_query_benchmark.cxx  sam_to_ram_benchmark.cxx
benchmark/io_performance/: ramview_perf.ipynb  samtoram_perf.ipynb
cmake/: ramtoolsConfig.cmake.in
cmake/modules/: GoogleBenchmark.cmake  RamtoolsGoogleTest.cmake
inc/RAMCore/: SamParser.h  SamToNTuple.h  SamToTTree.h
inc/ramcore/: BamtoNTuple.h  RAMNTupleView.h  RAMSort.h  RAMStats.h  RDF_RAMNTupleView.h  SamParser.h  SamToNTuple.h  SamToTTree.h
inc/rntuple/: RAMNTupleRecord.h
inc/ttree/: CigarOps.h  LinkDef.h  RAMRecord.h  Utils.h
rntuple/: RAMNTupleRecord.h  RAMntuplerecord.C  ramntupleview.C  samtoramntuple.C
scripts/: 00_run_bamtosamtoram.sh  00_run_samtoram.sh  checkalg.C  convert.sh  convert_all_formats.sh  parse_utils.py  plot_file_size_comparison.py  plot_query_comparison.py  prepare_region_query_data.sh  renamer.sh  render_benchmark.py  run_benchmark.py  run_benchmarks.sh  run_real_benchmark.sh  runviews.sh  tools_perf.py
src/RAMCore/: SamParser.cxx  SamToNTuple.cxx  SamToTTree.cxx
src/ramcore/: BamtoNTuple.cxx  RAMNTupleView.cxx  RAMSort.cxx  RAMStats.cxx  RDF_RAMNTupleView.cxx  SamParser.cxx  SamToNTuple.cxx  SamToTTree.cxx
src/rntuple/: RAMNTupleRecord.cxx
src/ttree/: RAMRecord.cxx
test/: CMakeLists.txt  CountEntriesTest.cxx  RAMCoreTests.cxx  RamviewCountsTest.cxx  bam_conversion.cxx  chromosome_split_test.cxx  generate_test_sam.cxx  ramcoretests.cxx  ramsorttests.cxx  ramstatstests.cxx  samparsertest.cxx
tests/: test_count_entries.C  test_ramview_counts.C
tools/: CMakeLists.txt  bamtoramntuple.cxx  checkindex.cxx  parsetreestats.cxx  rammerge.cxx  ramntupleview.cxx  ramrandom.cxx  ramreader.cxx  ramsort.cxx  ramstats.cxx  ramview.cxx  ramview_no_index.cxx  rdf_ramntupleview.cxx  samtoram.cxx  samtoramntuple.cxx
